添加点击事件. 注释掉日志.

--- a/styles/emp-tools.less
+++ b/styles/emp-tools.less
@@ -6,3 +6,11 @@
 
 .emp-tools {
 }
+
+atom-text-editor.editor .efd-goto-marker {
+  &:hover {
+    cursor: pointer;
+    border-bottom: 1px solid @text-color-info;
+  }
+  border-bottom: 1px dashed @text-color-info;
+}
